<resources>
    <string name="app_name">Filmly</string>

    <!-- Strings related to login -->
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">"Login"</string>
    <string name="remember">"Lembrar de mim"</string>
    <string name="or">"Ou"</string>
    <string name="lost_password">
        <u>Esqueceu sua senha?</u>
    </string>
    <string name="new_account">Não possui uma conta?
        <font color="#FFCC18">Crie uma.</font>
    </string>
    <string name="create_account">"Criar Conta"</string>
    <string name="name">Nome</string>
    <string name="password2">Confirmar Senha</string>
    <string name="or_create">Ou criar conta com</string>
    <string name="lost_pass">Recuperar Senha</string>
    <string name="lost_pass_send">Enviar e-mail de recuperação</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_more">Ver mais</string>
    <string name="top_filmes_today">Top Filmes de Hoje</string>
    <string name="hello_wil">Olá, %1$s!</string>
    <string name="top_series_today">Top Series de Hoje</string>
    <string name="top_actors_today">Top Atores de Hoje</string>
    <string name="label_home">Home</string>
    <string name="label_search">Search</string>
    <string name="label_lists">Lists</string>
    <string name="label_profile">Profile</string>
    <string name="your_lists">Suas Listas</string>
    <string name="sinopse_mr_robot">Elliot é um jovem programador que trabalha como engenheiro de segurança virtual durante o dia, e como hacker vigilante durante a noite. Elliot se vê em uma encruzilhada quando é recrutado para destruir a firma que ele é pago para proteger.</string>
    <string name="save_item">save</string>
    <string name="profileDialog_home_title">Configurar Página Inicial</string>
    <string name="save">salvar</string>
    <string name="order_lists">Ordenar listas</string>
    <string name="position">Posição</string>
    <string name="films">Filmes</string>
    <string name="series">Séries</string>
    <string name="actors">Atores</string>
    <string name="your_lists_dialog">Configurar Suas Listas</string>
    <string name="trending">Trending</string>
    <string name="facebook_app_id">259681709061555</string>
    <string name="twitter_api_key">G63PMYZPvJkJtFPHnNQkTIn38</string>
    <string name="twitter_api_secret">HYhUwBhgf98eBrPK871JrYrJ5CiDWhdNHqpldKFC4VRuo2jzDO</string>


</resources>