<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/label_home" />
    <item
        android:id="@+id/searchFragment"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/label_search"/>
    <item
        android:id="@+id/yourListsFragment"
        android:enabled="true"
        android:icon="@drawable/lists"
        android:title="@string/label_lists"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/profile"
        android:title="@string/label_profile"/>
</menu>