<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_home_dialog"
        android:background="@color/black101010"
        app:navigationIcon="@drawable/ic_baseline_close_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:text="@string/profileDialog_home_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Dialog.TextAppearance"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_home_configuration"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:text="@string/save"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/yellow"
                android:layout_width="wrap_content"
                android:layout_weight="0"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>


    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/tv_sortGender"
            style="@style/Dialog.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_lists" />

        <TextView
            android:id="@+id/textView3"
            style="@style/Dialog.TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/position"
            android:layout_marginEnd="16dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/mcb_filmes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center" />

        <TextView
            android:id="@+id/textView4"
            style="@style/Dialog.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/films" />

        <TextView
            android:id="@+id/tv_film_position"
            style="@style/Dialog.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="0"
            tools:text="1" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/mcb_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <TextView
            android:id="@+id/textView7"
            style="@style/Dialog.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/series" />

        <TextView
            android:id="@+id/tv_serie_position"
            style="@style/Dialog.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="0"
            tools:text="2" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/mcb_actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <TextView
            android:id="@+id/textView5"
            style="@style/Dialog.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/actors" />

        <TextView
            android:id="@+id/tv_actor_position"
            style="@style/Dialog.TextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="0"
            tools:text="3" />
    </LinearLayout>


</LinearLayout>