<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".ui.login.LoginActivity" android:background="@color/loginBg">


    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:contentPadding="0dp"
            app:cardBackgroundColor="@color/loginMainBg"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
            >

            <TextView
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textViewLogin"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp" android:textSize="32sp"
                    android:textColor="@android:color/white"/>
            <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/cvUsername"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@android:color/white"
                    android:layout_marginTop="50dp" app:layout_constraintTop_toBottomOf="@id/textViewLogin">
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textFieldUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        app:boxBackgroundColor="@android:color/white"
                        android:textColorHint="@android:color/black"
                >
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:selectAllOnFocus="true"
                            android:textColor="@android:color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp" app:layout_constraintTop_toBottomOf="@id/cvUsername"
                    android:layout_marginTop="10dp" android:id="@+id/cvPassword"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@android:color/white"
            >
                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textFieldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        app:boxBackgroundColor="@android:color/white"
                        android:textColorHint="@android:color/black"
                >
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:selectAllOnFocus="true"
                            android:textColor="@android:color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/remember" app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@android:color/white" android:layout_marginStart="3dp"
                    android:id="@+id/remember" android:buttonTint="@color/colorAccent"
                    app:layout_constraintTop_toTopOf="@+id/cvPassword" android:layout_marginTop="57dp"/>
            <TextView
                    android:text="@string/lost_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/lost_password"
                    app:layout_constraintTop_toBottomOf="@+id/cvPassword"
                    app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorAccent"
                    android:layout_marginTop="10dp" android:layout_marginEnd="10dp"/>
            <Button
                    android:id="@+id/login"
                    android:enabled="true"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="57dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/action_sign_in_short"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cvPassword"
                    app:layout_constraintVertical_bias="0.2" app:layout_constraintBottom_toTopOf="@+id/facebook"
                    android:backgroundTint="@color/colorAccent" android:textColor="@android:color/black"
                    android:textSize="18sp"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_google"
                    android:id="@+id/google" app:layout_constraintEnd_toStartOf="@+id/facebook"
                    app:layout_constraintBottom_toTopOf="@+id/newAccount" android:layout_marginBottom="54dp"
                    android:layout_marginEnd="29dp"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_facebook"
                    android:id="@+id/facebook"
                    android:layout_marginBottom="54dp"
                    app:layout_constraintBottom_toTopOf="@+id/newAccount"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_twitter"
                    android:id="@+id/imageView3" app:layout_constraintBottom_toTopOf="@+id/newAccount"
                    app:layout_constraintStart_toEndOf="@+id/facebook" android:layout_marginBottom="56dp"
                    android:layout_marginStart="27dp"/>
            <TextView
                    android:text="@string/new_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/newAccount"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"
                    android:textColor="@android:color/white" android:layout_marginBottom="10dp"/>
            <ProgressBar
                    android:id="@+id/loading"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="64dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/cvPassword"
                    app:layout_constraintStart_toStartOf="@id/cvPassword"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.3"/>
            <TextView
                    android:text="@string/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/or"
                    app:layout_constraintBottom_toTopOf="@+id/facebook"
                    app:layout_constraintTop_toBottomOf="@+id/login" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:textColor="@android:color/white"
                    android:layout_marginTop="20dp" android:layout_marginBottom="14dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>